--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,15 +3,79 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+    <context-param>
+        <param-name>hh</param-name>
+        <param-value>common</param-value>
+    </context-param>
     <servlet>
         <servlet-name>my</servlet-name>
         <servlet-class>com.sxy.servlet.MyServlet</servlet-class>
+        <init-param>
+            <param-name>jiema</param-name>
+            <param-value>utf-8</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet>
         <servlet-name>ServletLife</servlet-name>
         <servlet-class>com.sxy.servlet.ServletLife</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ServletMethod</servlet-name>
+        <servlet-class>com.sxy.servlet.ServletMethod</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RespServlet</servlet-name>
+        <servlet-class>com.sxy.servlet.RespServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CookieServlet</servlet-name>
+        <servlet-class>com.sxy.cookie.CookieServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SessionServlet</servlet-name>
+        <servlet-class>com.sxy.session.SessionServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Servlet2</servlet-name>
+        <servlet-class>com.sxy.session.Servlet2</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ContextServlet</servlet-name>
+        <servlet-class>com.sxy.servletContext.ContextServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>cs2</servlet-name>
+        <servlet-class>com.sxy.servletContext.cs2</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>cs2</servlet-name>
+        <url-pattern>/cs2</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ContextServlet</servlet-name>
+        <url-pattern>/cs</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Servlet2</servlet-name>
+        <url-pattern>/s2</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SessionServlet</servlet-name>
+        <url-pattern>/session</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CookieServlet</servlet-name>
+        <url-pattern>/cookie</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RespServlet</servlet-name>
+        <url-pattern>/resp</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletMethod</servlet-name>
+        <url-pattern>/method</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>my</servlet-name>
         <url-pattern>/my</url-pattern>
