filter and listener

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,6 +7,30 @@
         <param-name>hh</param-name>
         <param-value>common</param-value>
     </context-param>
+    <filter>
+        <filter-name>MyFilter</filter-name>
+        <filter-class>com.sxy.filter.MyFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>Filter2</filter-name>
+        <filter-class>com.sxy.filter.Filter2</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>MyFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>Filter2</filter-name>
+        <!--y结尾的都要过滤-->
+        <url-pattern>/my</url-pattern>
+    </filter-mapping>
+    <listener>
+    <listener-class>com.sxy.listener.MyListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>com.sxy.listener.SessionListener</listener-class>
+    </listener>
+
     <servlet>
         <servlet-name>my</servlet-name>
         <servlet-class>com.sxy.servlet.MyServlet</servlet-class>
